# guidebridge

./: .gitignore  AGENTS.md  LICENSE  README.md  llms.txt  quickstart.sh
.claude/skills/guidebridge/: SKILL.md
examples/demo/backend/: main.py  requirements.txt
examples/demo/frontend/: index.html  package-lock.json  package.json
examples/demo/frontend/src/: App.tsx  speech.ts
examples/tictactoe/: README.md
examples/tictactoe/backend/: main.py  requirements.txt
examples/tictactoe/frontend/: index.html  package-lock.json  package.json  vite.config.ts
examples/tictactoe/frontend/src/: App.tsx
python/: README.md  pyproject.toml
python/src/guidebridge/: __init__.py  bridge.py  iframe.py  matching.py  protocol.py  session.py  tools.py
python/src/guidebridge/adapters/: langchain.py  mcp.py  openai.py
python/tests/: test_authorize_binding.py  test_iframe_runtime.py  test_matching.py  test_mcp_adapter.py  test_session.py  test_stale_retry.py  test_ws_e2e.py
