[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guidebridge"
version = "0.2.1"
description = "Give any Python agent eyes and hands inside your React app: semantic page observation, cursor-led actions, and guided-tour overlays."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.5",
]
keywords = ["ai", "agent", "langchain", "fastapi", "react", "ui-automation", "guided-tour"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
langchain = ["langchain-core>=0.2"]
mcp = ["mcp>=1.2"]
dev = [
    "fastapi>=0.110",
    "langchain-core>=0.2",
    "mcp>=1.2",
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "uvicorn>=0.29",
    "websockets>=12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/guidebridge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
